--- a/upload.html
+++ b/upload.html
@@ -161,6 +161,8 @@
       }
 
       instr.textContent = "Authorizing Google Drive...";
+      console.log(`✅ Uploaded ${pose} to folder: https://drive.google.com/drive/folders/${studentId}`);
+
 
       const CLIENT_ID = "391305144947-10kjh8tk1ng6vks4ipkd3fi15jmh8dv9.apps.googleusercontent.com";
       const SCOPES = "https://www.googleapis.com/auth/drive.file";
