--- a/upload.html
+++ b/upload.html
@@ -5,10 +5,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Face Enrollment — Magic Circle</title>
 
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- MediaPipe -->
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
 
+  <!-- Google APIs -->
   <script async defer src="https://apis.google.com/js/api.js"></script>
   <script async defer src="https://accounts.google.com/gsi/client"></script>
 
@@ -52,12 +56,10 @@
     </div>
   </div>
 
-  <!-- Firebase SDK -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
     import { getAuth } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
 
-    // Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyBujiz5R1qEHcLvlMp9fQIViIMuWs3gRZk",
       authDomain: "cam-attendance-a4881.firebaseapp.com",
@@ -70,7 +72,6 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    // DOM elements
     const videoEl = document.getElementById("video");
     const circleCanvas = document.getElementById("circle_canvas");
     const snapCanvas = document.getElementById("snap_canvas");
@@ -84,7 +85,6 @@
     const snapCtx = snapCanvas.getContext("2d");
     const captured = {};
 
-    // Canvas setup
     let cssW = 0, cssH = 0, dpr = window.devicePixelRatio || 1;
     function resizeCanvas() {
       const rect = circleCanvas.getBoundingClientRect();
@@ -98,7 +98,6 @@
     window.addEventListener("resize", resizeCanvas);
     requestAnimationFrame(resizeCanvas);
 
-    // Manual capture
     captureBtn.addEventListener("click", () => {
       if (!videoEl.videoWidth || !videoEl.videoHeight) {
         instr.textContent = "Camera not active or not detected.";
@@ -123,14 +122,10 @@
       if (Object.keys(captured).length > 0) submitBtn.classList.remove("hidden");
     });
 
-    // Start camera
     let camera = null;
     async function startCamera() {
       try {
-        camera = new Camera(videoEl, {
-          onFrame: async () => {},
-          width: 480, height: 480,
-        });
+        camera = new Camera(videoEl, { onFrame: async () => {}, width: 480, height: 480 });
         await camera.start();
       } catch (e) {
         instr.textContent = "Camera error: " + e.message;
@@ -153,7 +148,6 @@
       instr.textContent = "Enrollment cancelled";
     });
 
-    // ✅ Google Drive upload
     submitBtn.addEventListener("click", async () => {
       if (Object.keys(captured).length === 0) {
         instr.textContent = "Please capture at least one photo.";
@@ -161,8 +155,6 @@
       }
 
       instr.textContent = "Authorizing Google Drive...";
-      console.log(`✅ Uploaded ${pose} to folder: https://drive.google.com/drive/folders/${studentId}`);
-
 
       const CLIENT_ID = "391305144947-10kjh8tk1ng6vks4ipkd3fi15jmh8dv9.apps.googleusercontent.com";
       const SCOPES = "https://www.googleapis.com/auth/drive.file";
@@ -217,9 +209,11 @@
           headers: { Authorization: "Bearer " + accessToken },
           body: form,
         });
+        console.log(`✅ Uploaded ${pose} to https://drive.google.com/drive/folders/${studentId}`);
       }
 
-      instr.textContent = "✅ Uploaded successfully to Google Drive!";
+      instr.innerHTML = `✅ Uploaded successfully! 
+        <a href="https://drive.google.com/drive/folders/${studentId}" target="_blank" class="underline text-blue-400">View in Drive</a>`;
     });
 
     startCamera();
